<resources>
    <string name="app_name">KeyLog</string>
    <string name="validationText">نص التحقق:</string>
    <string name="min6">ا</string>
    <string name="mid4">ب</string>
    <string name="mid7">ت</string>
    <string name="top3">ث</string>
    <string name="top11">ج</string>
    <string name="top10">ح</string>
    <string name="top9">خ</string>
    <string name="bot10">د</string>
    <string name="bot1">ذ</string>
    <string name="bot4">ر</string>
    <string name="bot5">ى</string>
    <string name="bot6">ة</string>
    <string name="bot3">ؤ</string>
    <string name="bot8">ز</string>
    <string name="mid2">س</string>
    <string name="mid1">ش</string>
    <string name="top2">ص</string>
    <string name="top1">ض</string>
    <string name="mid11">ط</string>
    <string name="top7">ع</string>
    <string name="bot9">ظ</string>
    <string name="space" >" "</string>
    <string name="bot7">و</string>
    <string name="bot2">ء</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="top8">ه</string>
    <string name="mid8">ن</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_8">8</string>
    <string name="email">البريد الالكتروني :</string>
    <string name="ValidatinBody">بسم الله الرحمن الرحيم</string>
    <string name="ValidationBodyLable">اكتب النص التالي في خانة التحقق</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="mid3">ي</string>
    <string name="mid9">م</string>
    <string name="mid5">ل</string>
    <string name="mid10">ك</string>
    <string name="top4">ق</string>
    <string name="top5">ف</string>
    <string name="top6">غ</string>
</resources>
